--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 #eightBall {
-    width: 300px;
+    width: 400px;
     height: 300px;
     background-color: black;
     color: white;
@@ -10,6 +10,14 @@
     align-items: center;
 }
 
-#answer {
+#answer, #answerTwo {
     border-radius: 0%;
+    width: 300px;
+}
+
+#menu{
+    height: 700px;
+    width: 500px;
+    background-size: cover;
+    background-image: url(../img/notepad.jpeg);
 }
