--- a/css/styles.css
+++ b/css/styles.css
@@ -1,18 +1,21 @@
 #eightBall {
     width: 400px;
-    height: 300px;
+    height: 400px;
     background-color: black;
     color: white;
     margin: auto;
-    border-radius: 0%;
+    border-radius: 100%;
     display: grid;
     justify-content: center;
     align-items: center;
 }
 
 #answer, #answerTwo {
-    border-radius: 0%;
-    width: 300px;
+    margin-top: 40px;
+    border-radius: 60%;
+    width: 250px;
+    height: 150px;
+    font-size: 19px;
 }
 
 #menu{
@@ -20,4 +23,9 @@
     width: 800px;
     background-size: cover;
     background-image: url(../img/notepad.jpeg);
+}
+
+#menuBtnPro{
+    width: 50%;
+    
 }
