--- a/css/styles.css
+++ b/css/styles.css
@@ -10,7 +10,7 @@
     align-items: center;
 }
 
-#answer, #answerTwo {
+#answerPro, #answerVeg {
     margin-top: 40px;
     border-radius: 60%;
     width: 250px;
