--- a/css/styles.css
+++ b/css/styles.css
@@ -25,7 +25,24 @@
     background-image: url(../img/notepad.jpeg);
 }
 
-#menuBtnPro{
-    width: 50%;
-    
+@media only screen and (max-width: 1200px){
+    /*Tablets [601px -> 1200px]*/
+    #menu {
+        height: 600px;
+        width: 700px;
+    }
+}
+@media only screen and (max-width: 600px){
+	/*Big smartphones [426px -> 600px]*/
+    #menu {
+        height: 500px;
+        width: 550px;
+    }
+}
+@media only screen and (max-width: 425px){
+	/*Small smartphones [325px -> 425px]*/
+    #menu {
+        height: 500px;
+        width: 400px;
+    }
 }
