--- a/css/styles.css
+++ b/css/styles.css
@@ -1,21 +1,27 @@
 #eightBall {
-    width: 400px;
-    height: 400px;
-    background-color: black;
-    color: white;
+    width: 500px;
+    height: 500px;
+    /* background-color: black; */
+    /* color: white; */
+    background-image: url(../img/8ball.png);
+    background-size: contain;
     margin: auto;
-    border-radius: 100%;
+    /* border-radius: 100%; */
     display: grid;
     justify-content: center;
     align-items: center;
 }
 
 #answerPro, #answerVeg {
-    margin-top: 40px;
-    border-radius: 60%;
-    width: 250px;
+    margin-top: 150px;
+    width: 275px;
     height: 150px;
-    font-size: 19px;
+    font-size: 25px;
+    background: none; 
+}
+
+#menuBtnPro, #menuBtnVeg{
+    margin-top: 50px;
 }
 
 #menu{
