feat added a clear menu button and styled it. Added more dishes

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,12 +1,9 @@
 #eightBall {
     width: 500px;
     height: 500px;
-    /* background-color: black; */
-    /* color: white; */
     background-image: url(../img/8ball.png);
     background-size: contain;
     margin: auto;
-    /* border-radius: 100%; */
     display: grid;
     justify-content: center;
     align-items: center;
@@ -22,6 +19,11 @@
 
 #menuBtnPro, #menuBtnVeg{
     margin-top: 50px;
+}
+
+#menuClear{
+    width: 150px;
+    height: 50px;
 }
 
 #menu{
